# python-betterproto

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  Makefile  Pipfile  README.md  asv.conf.json  conftest.py  example.py  gen.sh  package.json  protoc-gen-betterpy.py  pyproject.toml  pytest.ini  setup.py  test.py  tox.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  code-quality.yml  codeql-analysis.yml  perf.yml  release.yml
benchmarks/: benchmarks.py
betterproto/: __init__.py  _types.py  casing.py  enums.py  parse.py  plugin.bat  plugin.py  serialize.py
betterproto-extras/: Cargo.toml  betterproto_extras.pyi  pyproject.toml
betterproto-extras/src/: descriptors.rs  lib.rs  well_known_types.rs
betterproto-extras/src/betterproto_interop/: error.rs  field_meta.rs  message.rs  message_class.rs  message_meta.rs  mod.rs
betterproto-extras/src/decode/: custom_message.rs  error.rs  field.rs  map_entry.rs  mod.rs  value.rs
betterproto-extras/src/encode/: chunk.rs  error.rs  message.rs  mod.rs
betterproto/compile/: importing.py  naming.py
betterproto/grpc/: grpclib_client.py
betterproto/grpc/util/: async_channel.py
betterproto/lib/google/: protobuf.py
betterproto/templates/: main.py  template.py  template.py.j2
betterproto/tests/: README.md  bool.json  bool.proto  bytes.proto  casing.json  casing.proto  double-negative.json  double-nested.json  double-nested.proto  double.json  enums.json  generate.py  googletypes.json  googletypes.proto  int32.proto  keywords.json  keywords.proto  mapmessage.proto  mocks.py  nested.json  nested.proto  nestedtwice.json  nestedtwice.proto  oneof.proto  repeatedmessage.json  repeatedmessage.proto  repeatedpacked.json  repeatedpacked.proto  signed-negative.json  signed.json  signed.proto  test_casing.py  test_features.py  test_get_ref_type.py  test_inputs.py  test_service_client.py  test_service_stub.py  util.py
betterproto/tests/grpc/: test_grpclib_client.py  test_stream_stream.py  thing_service.py
betterproto/tests/inputs/: config.py  xfail.py
docs/: api.rst  conf.py  faq.rst  index.rst  migrating.rst  quick-start.rst  requirements.txt  troubleshooting.rst  upgrading.md  upgrading.rst
docs/_templates/: genindex.html  layout.html
sample_out/example_service/: __init__.py
src/: TEXT_TEST_PY  extension_pb2.py  message.py  test.py
src/bananaproto/: __init__.py  _version.py
src/bananaproto/compile/: importing.py  naming.py
src/bananaproto/grpc/: grpclib_client.py  grpclib_server.py
src/bananaproto/plugin/: __main__.py  compiler.py  main.py  models.py  parser.py
src/bananaproto/templates/: template.py.j2
src/betterproto/: __init__.py  __main__.py  _types.py  _version.py  casing.py  const.py  enum.py  io.py  message.py  plugin.bat  plugin.py  plugin_dataclasses.py  scalar_array.py  utils.py
src/betterproto/compile/: importing.py  naming.py
src/betterproto/grpc/: __init__.py  grpcio_server.py  grpclib_client.py  grpclib_server.py
src/betterproto/plugin/: __init__.py  __main__.py  compiler.py  exception_hook.py  main.py  models.py  module_validation.py  parser.py  plugin.bat  typing_compiler.py
src/betterproto/templates/: grpc.py.j2  header.py.j2  template.py.j2  twirp.py.j2
tests/: README.md  conftest.py  generate.py  mocks.py  oneof_pattern_matching.py  test_all_definition.py  test_casing.py  test_deprecated.py  test_documentation.py  test_enum.py  test_features.py  test_get_ref_type.py  test_inputs.py  test_mapmessage.py  test_mapmessage_optionals.py  test_module_validation.py  test_nested_enums.py  test_oneof_pattern_matching.py  test_pickling.py  test_streams.py  test_struct.py  test_timestamp.py  test_typing_compiler.py  test_version.py  util.py
tests/grpc/: test_grpc_client.py  test_grpclib_client.py  test_stream_stream.py  thing_service.py
tests/inputs/: config.py
tests/inputs/bool/: bool.proto  test_bool.py
tests/inputs/bytes/: bytes.proto
tests/inputs/casing/: casing.proto  test_casing.py
tests/inputs/casing_inner_class/: casing_inner_class.proto  test_casing_inner_class.py
tests/inputs/casing_message_field_uppercase/: casing_message_field_uppercase.proto  casing_message_field_uppercase.py  test_casing_message_field_uppercase.py
tests/inputs/custom_options/: double.proto  extension.proto
tests/inputs/deprecated/: deprecated.json  deprecated.proto
tests/inputs/deprecated_field/: deprecated_field.proto
tests/inputs/docstrings/: docstrings.proto
tests/inputs/documentation/: documentation.proto
tests/inputs/double/: double.proto
tests/inputs/empty_repeated/: empty_repeated.json  empty_repeated.proto
tests/inputs/empty_service/: empty_service.proto
tests/inputs/entry/: entry.proto
tests/inputs/enum/: enum.json  enum.proto  test_enum.py  test_enum_pydantic.py  test_enum_pydantic_optionals.py
tests/inputs/example/: example.proto
tests/inputs/example_service/: example_service.proto  test_example_service.py
tests/inputs/field_name_identical_to_type/: field_name_identical_to_type.json  field_name_identical_to_type.proto
tests/inputs/fixed/: fixed.json  fixed.proto
tests/inputs/float/: float.json  float.proto
tests/inputs/google_impl_behavior_equivalence/: google_impl_behavior_equivalence.proto  test_google_impl_behavior_equivalence.py
tests/inputs/googletypes/: googletypes.proto
tests/inputs/googletypes_request/: googletypes_request.proto  test_googletypes_request.py
tests/inputs/googletypes_response/: googletypes_response.proto  test_googletypes_response.py
tests/inputs/googletypes_response_embedded/: googletypes_response_embedded.proto  test_googletypes_response_embedded.py
tests/inputs/googletypes_struct/: googletypes_struct.json  (+1 more)
tests/streams/: delimited_messages.in  dump_varint_negative.expected  dump_varint_positive.expected  load_varint_cutoff.in  message_dump_file_multiple.expected  message_dump_file_single.expected
(+198 files in other folders)
