[package]
name = "betterproto-extras"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "betterproto_extras"
crate-type = ["cdylib"]

[dependencies]
indoc = "2.0.3"
prost = { version = "0.12.1", features = ["no-recursion-limit"] }
pyo3 = { version = "0.19.0", features = ["abi3-py37", "extension-module"] }
thiserror = "1.0.48"
